2000-05-24  Peter Stephenson  <pws@cambridgesiliconradio.com>

	* 11561: Src/lex.c, Doc/Zsh/expn.yo: don't use RC_QUOTES in Posix
	$'...' quoting.

	* 11560: Doc/Zsh/expn.yo: pipes are pipes even if plumbing isn't.

2000-05-24  Bart Schaefer  <schaefer@zsh.org>

	* 11554: Doc/Zsh/compsys.yo: Rearrange _arguments doc some more.

2000-05-24  Sven Wischnowsky  <wischnow@zsh.org>

	* 11552: Completion/Linux/_rpm, Src/Zle/computil.c: fix for
 	comparguments to make -s have an effect again
	
2000-05-24  Clint Adams  <schizo@debian.org>

	* 11548: Completion/User/_ispell: add -h switch to
	designate input file as HTML.

2000-05-23  Peter Stephenson  <pws@pwstephenson.fsnet.co.uk>

	* 11542: Doc/Zsh/compsys.yo: more wording `improvements'.

2000-05-23  Oliver Kiddle  <opk@zsh.org>

	* 11541:  Completion/User/_chown, Completion/User/_perl_basepods,
	Completion/User/_perl_modules, Completion/User/_user_at_host,
	Completion/AIX/_lsdev: minor completion fixes

	* 11539: Completion/User/_netscape, Completion/User/_urls: further
	suffix handling improvements

2000-05-23  Peter Stephenson  <pws@cambridgesiliconradio.com>

	* 11537: Completion/Command/_complete_tag,
	Completion/Command/.distfiles, Doc/Zsh/compsys.yo: new
	_complete_tag function.

2000-05-23  Sven Wischnowsky  <wischnow@zsh.org>

	* 11536: Doc/Zsh/mod_zutil.yo: doc clarifications for zparseopts
	
	* 11533: Doc/Zsh/compwid.yo, Src/params.c, Src/Zle/comp.h,
 	Src/Zle/compcore.c, Src/Zle/complete.c: add -[ak] options to
 	compadd
	
	* 11530: Doc/Zsh/mod_zutil.yo, Src/Modules/zutil.c: add -E option
 	to zparseopts
	
	* 11525: Completion/Base/_arguments, Completion/Commands/_complete_help,
 	Completion/Commands/_next_tags, Completion/Core/_description,
 	Completion/Core/_next_label: use `set -A' instead of `eval' in
 	more places
	
	* 11524: Src/builtin.c: fix for read -q without a shout
	
	* 11523: Src/hist.c, Src/init.c, Src/lex.c, Src/zsh.h, Src/Zle/zle.h,